留言獲取>少粉帳號測試完成/優化錯誤處理